Removed unsupported properties from setenv.sh